--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "description": "TRUE Framework === The Really Unique & Exciting Framework (for the web)",
   "version": "0.0.0-development",
   "license": "Unlicense",
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/MathiasKandelborg/TRUE.git"
   },
-  "workspaces": [
-    "true-cms"
-  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -48,7 +45,7 @@
     "react-dom": "16.13.1",
     "react-final-form": "^6.5.1",
     "react-icons": "^3.10.0",
-    "eslint": "^7.6.0",
+    "sitemap": "^6.2.0",
     "ua-parser-js": "^0.7.21"
   },
   "devDependencies": {
@@ -56,12 +53,12 @@
     "@commitlint/config-conventional": "^9.1.1",
     "@commitlint/prompt": "9.1.1",
     "@next/eslint-plugin-next": "^9.5.1",
-    "@types/webpack-env": "^1.15.2",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/ua-parser-js": "^0.7.33",
+    "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.9.0",
     "babel-eslint": "^10.1.0",
