--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "name": "true-framework",
   "description": "TRUE Framework === The Really Unique & Exciting Framework (for the web)",
   "version": "0.0.0-development",
-  "license": "Unlicense",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/MathiasKandelborg/TRUE.git"
