--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,4 +1,13 @@
 {
+  "branches": [
+    "+([0-9])?(.{+([0-9]),x}).x",
+    "master",
+    "next",
+    "next-major",
+    { "name": "beta", "prerelease": true },
+    { "name": "alpha", "prerelease": true }
+  ],
+
   "release": {
     "plugins": [
       "@semantic-release/commit-analyzer",
