--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "description": "TRUE Framework === The Really Unique & Exciting Framework (for the web)",
   "version": "0.0.0-development",
   "license": "MIT",
-  "homepage": "https://github.com/MathiasKandelborg/TRUE#readme",
+  "homepage": "https://github.com/MathiasKandelborg/TRUE-framework#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MathiasKandelborg/TRUE.git"
+    "url": "git+https://github.com/MathiasKandelborg/TRUE-framework.git"
   },
   "bugs": {
-    "url": "https://github.com/MathiasKandelborg/TRUE/issues"
+    "url": "https://github.com/MathiasKandelborg/TRUE-framework/issues"
   },
   "engines": {
     "node": ">=10.0.0"
@@ -90,7 +90,7 @@
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2",
     "husky": "4.3.0",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "10.4.0",
     "prettier": "2.1.2",
     "semantic-release": "17.1.2",
     "typescript": "4.0.3"
