fix(env): hostname env variable needs to be public

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ NEXT_PUBLIC_PROJECT_URL='true-framework.vercel.app'
 NEXT_PUBLIC_SANITY_PROJECT_ID="uyxuk36u"
 
 
+NEXT_PUBLIC_HOST='true-framework.vercel.app'
+NEXT_PUBLIC_PORT=3000
+NEXT_PUBLIC_HOSTNAME=https://$HOST:$PORT
 ### Server only variables
-HOST='true-framework.vercel.app'
-PORT=3333
-HOSTNAME=https://$HOST:$PORT
 
 SANITY_API_TOKEN
