feat(settings): add title, description and language to common settings
also update .env so it has description and a proper title

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 ### Public variables
-NEXT_PUBLIC_PROJECT_TITLE="TRUE Starter Kit"
+NEXT_PUBLIC_PROJECT_TITLE="TRUE Framework"
+NEXT_PUBLIC_PROJECT_DESCRIPTION="The TRUE Framework === The Really Unique and Exciting Framework"
 NEXT_PUBLIC_PROJECT_URL='true-framework.vercel.app'
 
 NEXT_PUBLIC_SANITY_PROJECT_ID="uyxuk36u"
@@ -11,3 +12,4 @@ NEXT_PUBLIC_HOSTNAME=https://$HOST:$PORT
 ### Server only variables
 
 SANITY_API_TOKEN
+ 
