--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "eslint.enable": true
+  "eslint.enable": true,
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  },
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "typescript.tsdk": "../../.yarn/sdks/typescript/lib",
+  "eslint.nodePath": "../../.yarn/sdks",
+  "prettier.prettierPath": "../../.yarn/sdks/prettier/index.js"
 }
