--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "../../node_modules/cz-conventional-changelog"
+      "path": "cz-conventional-changelog"
     }
   },
   "husky": {
@@ -60,7 +60,8 @@
     "react-icons": "3.11.0",
     "sitemap": "6.3.0",
     "swr": "0.3.3",
-    "ua-parser-js": "^0.7.22"
+    "ua-parser-js": "^0.7.22",
+    "vsce-yarn-patch": "^1.66.2"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
@@ -91,6 +92,7 @@
     "lint-staged": "10.4.0",
     "prettier": "2.1.2",
     "semantic-release": "17.1.2",
-    "typescript": "4.0.3"
+    "typescript": "4.0.3",
+    "webpack": "5.0.0-rc.3"
   }
 }
