feat: update packages

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "next build && node util/fixSw.js",
     "start": "next start",
     "commit": "git-cz",
+    "check:all": " prettier components pages typescript util && eslint .",
     "semantic-release": "semantic-release"
   },
   "config": {
@@ -42,26 +43,25 @@
     "@sanity/image-url": "0.140.19",
     "@types/express": "4.17.8",
     "@types/node": "14.11.2",
-    "@types/react": "16.9.49",
+    "@types/react": "16.9.50",
     "@types/react-dom": "16.9.8",
     "@types/webpack-env": "1.15.3",
     "clsx": "1.1.1",
     "easy-peasy": "3.3.1",
     "final-form": "4.20.1",
-    "framer-motion": "2.6.15",
+    "framer-motion": "2.7.7",
     "groq": "1.150.1",
     "mdi-material-ui": "6.19.0",
     "next": "9.5.4-canary.23",
-    "next-pwa": "^3.1.4",
-    "next-seo": "4.7.3",
+    "next-pwa": "3.1.5",
+    "next-seo": "4.11.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-final-form": "6.5.1",
-    "react-icons": "3.11.0",
-    "sitemap": "6.3.0",
-    "swr": "0.3.3",
-    "ua-parser-js": "^0.7.22",
-    "vsce-yarn-patch": "^1.66.2"
+    "sitemap": "6.3.2",
+    "swr": "0.3.5",
+    "ua-parser-js": "0.7.22",
+    "vsce-yarn-patch": "1.66.2"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
@@ -69,24 +69,24 @@
     "@commitlint/prompt": "11.0.0",
     "@next/eslint-plugin-next": "9.5.3",
     "@types/ua-parser-js": "0.7.33",
-    "@typescript-eslint/eslint-plugin": "4.2.0",
-    "@typescript-eslint/parser": "4.2.0",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "babel-eslint": "10.1.0",
     "commitizen": "4.2.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "7.9.0",
+    "eslint": "7.10.0",
     "eslint-config-airbnb": "18.2.0",
-    "eslint-config-airbnb-typescript": "10.0.0",
-    "eslint-config-prettier": "6.11.0",
+    "eslint-config-airbnb-typescript": "11.0.0",
+    "eslint-config-prettier": "6.12.0",
     "eslint-import-resolver-typescript": "2.3.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jsdoc": "30.5.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.6.3",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react": "7.21.3",
     "eslint-plugin-react-hooks": "4.1.2",
     "husky": "4.3.0",
     "lint-staged": "10.4.0",
