feat(env): add more env variable placeholders for seo

--- a/.env
+++ b/.env
@@ -1,9 +1,20 @@
 ### Public variables
+NEXT_PUBLIC_PROJECT_APP_NAME="TRUE Framework"
 NEXT_PUBLIC_PROJECT_TITLE="TRUE Framework"
 NEXT_PUBLIC_PROJECT_DESCRIPTION="The TRUE Framework === The Really Unique and Exciting Framework"
-NEXT_PUBLIC_PROJECT_URL='true-framework.vercel.app'
+NEXT_PUBLIC_PROJECT_OG_TITLE="TRUE Framework"
+NEXT_PUBLIC_PROJECT_OG_DESCRIPTION="The TRUE Framework === The Really Unique and Exciting Framework"
 
+NEXT_PUBLIC_PROJECT_OG_AUTHOR_FIRST_NAME="Mathias"
+NEXT_PUBLIC_PROJECT_OG_AUTHOR_LAST_NAME="Kandelborg"
+NEXT_PUBLIC_PROJECT_OG_AUTHOR_USERNAME="MathiasKandelborg"
+NEXT_PUBLIC_PROJECT_OG_AUTHOR_HANDLE="kandelborg"
+NEXT_PUBLIC_PROJECT_OG_AUTHOR_AVATAR="https://s.gravatar.com/avatar/f4299efda225903c68fa649b9cb71d7d?s=80"
+NEXT_PUBLIC_PROJECT_OG_AUTHOR_GENDER="male"
+
+NEXT_PUBLIC_PROJECT_URL='https://true-framework.vercel.app'
 NEXT_PUBLIC_SANITY_PROJECT_ID="uyxuk36u"
+
 
 
 NEXT_PUBLIC_HOST='true-framework.vercel.app'
