--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-   "*.{js,jsx,ts,tsx}": ['eslint -f codeframe --fix', 'prettier --write'],
+   "*.{js,jsx,ts,tsx}": ['eslint -f codeframe --fix --cache', 'prettier --write']
 }
