--- a/package.json
+++ b/package.json
@@ -39,24 +39,24 @@
   "dependencies": {
     "@material-ui/core": "4.11.0",
     "@sanity/block-content-to-react": "2.0.7",
-    "@sanity/client": "1.150.7",
+    "@sanity/client": "2.0.1",
     "@sanity/image-url": "0.140.19",
     "@types/express": "4.17.8",
-    "@types/node": "14.11.2",
-    "@types/react": "16.9.50",
+    "@types/node": "14.11.8",
+    "@types/react": "16.9.52",
     "@types/react-dom": "16.9.8",
     "@types/webpack-env": "1.15.3",
     "clsx": "1.1.1",
-    "easy-peasy": "3.3.1",
+    "easy-peasy": "4.0.1",
     "final-form": "4.20.1",
-    "framer-motion": "2.8.0",
-    "groq": "1.150.1",
+    "framer-motion": "2.9.1",
+    "groq": "2.0.1",
     "mdi-material-ui": "6.19.0",
-    "next": "9.5.4",
+    "next": "9.5.6-canary.2",
     "next-pwa": "3.1.5",
-    "next-seo": "4.11.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next-seo": "4.13.0",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-final-form": "6.5.1",
     "sitemap": "6.3.2",
     "swr": "0.3.5",
@@ -66,31 +66,32 @@
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
     "@commitlint/prompt": "11.0.0",
-    "@next/eslint-plugin-next": "9.5.3",
+    "@next/eslint-plugin-next": "9.5.5",
     "@types/ua-parser-js": "0.7.33",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.4.1",
+    "@typescript-eslint/parser": "4.4.1",
     "babel-eslint": "10.1.0",
     "commitizen": "4.2.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "7.10.0",
+    "eslint": "7.11.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-airbnb-typescript": "11.0.0",
     "eslint-config-prettier": "6.12.0",
     "eslint-import-resolver-typescript": "2.3.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.6.3",
+    "eslint-plugin-jsdoc": "30.6.5",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.21.3",
+    "eslint-plugin-react": "7.21.4",
     "eslint-plugin-react-hooks": "4.1.2",
     "husky": "4.3.0",
     "lint-staged": "10.4.0",
     "prettier": "2.1.2",
-    "semantic-release": "17.1.2",
-    "typescript": "4.0.3"
+    "semantic-release": "17.2.1",
+    "typescript": "4.0.3",
+    "webpack": "5.1.2"
   }
 }
