--- a/package.json
+++ b/package.json
@@ -42,24 +42,26 @@
     "@sanity/client": "2.0.1",
     "@sanity/image-url": "0.140.19",
     "@types/express": "4.17.8",
-    "@types/node": "14.11.8",
-    "@types/react": "16.9.52",
+    "@types/node": "14.14.2",
+    "@types/react": "16.9.53",
     "@types/react-dom": "16.9.8",
     "@types/webpack-env": "1.15.3",
     "clsx": "1.1.1",
     "easy-peasy": "4.0.1",
     "final-form": "4.20.1",
-    "framer-motion": "2.9.1",
+    "framer-motion": "2.9.4",
     "groq": "2.0.1",
-    "mdi-material-ui": "6.19.0",
-    "next": "9.5.6-canary.2",
+    "i18next-fs-backend": "^1.0.7",
+    "i18next-http-backend": "^1.0.21",
+    "mdi-material-ui": "6.20.0",
+    "next": "^9.5.6-canary.11",
     "next-pwa": "3.1.5",
-    "next-seo": "4.13.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-final-form": "6.5.1",
+    "next-seo": "4.14.0",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-final-form": "6.5.2",
     "sitemap": "6.3.2",
-    "swr": "0.3.5",
+    "swr": "0.3.6",
     "ua-parser-js": "0.7.22"
   },
   "devDependencies": {
@@ -68,30 +70,30 @@
     "@commitlint/prompt": "11.0.0",
     "@next/eslint-plugin-next": "9.5.5",
     "@types/ua-parser-js": "0.7.33",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
-    "@typescript-eslint/parser": "4.4.1",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
     "babel-eslint": "10.1.0",
-    "commitizen": "4.2.1",
+    "commitizen": "4.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "7.11.0",
     "eslint-config-airbnb": "18.2.0",
-    "eslint-config-airbnb-typescript": "11.0.0",
-    "eslint-config-prettier": "6.12.0",
+    "eslint-config-airbnb-typescript": "12.0.0",
+    "eslint-config-prettier": "6.14.0",
     "eslint-import-resolver-typescript": "2.3.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.6.5",
+    "eslint-plugin-jsdoc": "30.7.3",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.21.4",
-    "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "4.3.0",
-    "lint-staged": "10.4.0",
+    "lint-staged": "10.4.2",
     "prettier": "2.1.2",
     "semantic-release": "17.2.1",
     "typescript": "4.0.3",
-    "webpack": "5.1.2"
+    "webpack": "5.1.3"
   }
 }
