--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
-  "eslint.enable": true,
   "search.exclude": {
     "**/.yarn": true,
     "**/.pnp.*": true
   },
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "typescript.tsdk": "../../.yarn/sdks/typescript/lib",
-  "eslint.nodePath": "../../.yarn/sdks",
-  "prettier.prettierPath": "../../.yarn/sdks/prettier/index.js"
+  "editor.formatOnSaveMode": "file",
+  "editor.formatOnSave": true,
+"editor.codeActionsOnSave": {
+  "source.fixAll": true
+},
+  "eslint.codeActionsOnSave.mode": "all",
+  "eslint.lintTask.options": "--cache .",
+  "eslint.packageManager": "yarn"
 }
