--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "framer-motion": "2.9.4",
     "groq": "2.0.1",
     "mdi-material-ui": "6.20.0",
-    "next": "9.5.6-canary.12",
+    "next": "10",
     "next-pwa": "3.1.5",
     "next-seo": "4.14.0",
     "react": "17.0.0",
