feat(version): bump version to fix ci

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Mathias Kandelborg",
   "name": "true-framework",
   "description": "TRUE Framework === The Really Unique & Exciting Framework (for the web)",
-  "version": "0.0.0-development",
+  "version": "1.0.0",
   "license": "MIT",
   "homepage": "https://github.com/MathiasKandelborg/TRUE-framework#readme",
   "repository": {
