--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
     "framer-motion": "2.9.4",
     "groq": "2.0.1",
     "mdi-material-ui": "6.20.0",
-    "next": "10",
+    "next": "^10.0.1-canary.2",
     "next-pwa": "3.1.5",
-    "next-seo": "4.14.1",
+    "next-seo": "4.15.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-final-form": "6.5.2",
     "sitemap": "6.3.2",
-    "swr": "0.3.7",
+    "swr": "0.3.8-beta.2",
     "ua-parser-js": "0.7.22"
   },
   "devDependencies": {
@@ -79,7 +79,7 @@
     "eslint-config-prettier": "6.15.0",
     "eslint-import-resolver-typescript": "2.3.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.3",
+    "eslint-plugin-jsdoc": "30.7.5",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
@@ -88,9 +88,9 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "husky": "4.3.0",
-    "lint-staged": "10.5.0",
+    "lint-staged": "10.5.1",
     "prettier": "2.1.2",
-    "semantic-release": "17.2.1",
+    "semantic-release": "17.2.2",
     "typescript": "4.0.5",
     "webpack": "5.3.2"
   }
