--- a/package.json
+++ b/package.json
@@ -37,61 +37,69 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "4.11.0",
-    "@sanity/block-content-to-react": "2.0.7",
-    "@sanity/client": "2.0.1",
-    "@sanity/image-url": "0.140.19",
-    "@types/express": "4.17.8",
-    "@types/node": "14.14.5",
-    "@types/react": "16.9.54",
-    "@types/react-dom": "16.9.9",
-    "@types/webpack-env": "1.15.3",
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.1",
+    "@mui/styles": "^5.4.1",
+    "@mui/system": "^5.4.1",
+    "@mui/types": "^7.1.1",
+    "@sanity/block-content-to-react": "3.0.0",
+    "@sanity/client": "2.16.0",
+    "@sanity/image-url": "1.0.1",
     "clsx": "1.1.1",
-    "easy-peasy": "4.0.1",
-    "final-form": "4.20.1",
-    "framer-motion": "2.9.4",
-    "groq": "2.0.1",
-    "mdi-material-ui": "6.20.0",
-    "next": "^10.0.1-canary.4",
-    "next-pwa": "3.1.5",
-    "next-seo": "4.14.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-final-form": "6.5.2",
-    "sitemap": "6.3.2",
-    "swr": "0.3.6",
-    "ua-parser-js": "0.7.22"
+    "easy-peasy": "^5.0.3",
+    "final-form": "4.20.2",
+    "framer-motion": "4.1.17",
+    "groq": "2.15.0",
+    "mdi-material-ui": "^7.1.0",
+    "next": "^12.0.10",
+    "next-i18next": "^10.3.0",
+    "next-pwa": "5.3.1",
+    "next-seo": "^4.26.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-final-form": "6.5.3",
+    "sitemap": "7.0.0",
+    "swr": "1.0.0",
+    "ua-parser-js": "0.7.28"
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "@commitlint/prompt": "11.0.0",
-    "@next/eslint-plugin-next": "10.0.0",
-    "@types/ua-parser-js": "0.7.33",
-    "@typescript-eslint/eslint-plugin": "4.6.0",
-    "@typescript-eslint/parser": "4.6.0",
+    "@commitlint/cli": "13.1.0",
+    "@commitlint/config-conventional": "13.1.0",
+    "@commitlint/prompt": "13.1.0",
+    "@next/eslint-plugin-next": "11.1.2",
+    "@types/express": "4.17.13",
+    "@types/node": "16.7.10",
+    "@types/react": "17.0.20",
+    "@types/react-dom": "17.0.9",
+    "@types/ua-parser-js": "0.7.36",
+    "@types/webpack-env": "1.16.2",
+    "@typescript-eslint/eslint-plugin": "4.30.0",
+    "@typescript-eslint/parser": "4.30.0",
     "babel-eslint": "10.1.0",
-    "commitizen": "4.2.2",
+    "commitizen": "4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "7.12.1",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-config-airbnb-typescript": "12.0.0",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-import-resolver-typescript": "2.3.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.3",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "14.0.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jsdoc": "36.0.8",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "4.3.0",
-    "lint-staged": "10.5.0",
-    "prettier": "2.1.2",
-    "semantic-release": "17.2.1",
-    "typescript": "4.0.5",
-    "webpack": "5.3.0"
+    "husky": "^7.0.4",
+    "lint-staged": "11.1.2",
+    "prettier": "^2.5.1",
+    "semantic-release": "17.4.7",
+    "typescript": "^4.5.5",
+    "webpack": "5.52.0"
   }
 }
